INCLUDE_DIRECTORIES(
    ${GDAL_INCLUDE_DIR}
    ${OPENSCENEGRAPH_INCLUDE_DIR}
    ${VIRTUALPLANETBUILDER_INCLUDE_DIR}
)

# applications
SET(TARGET_DEFAULT_PREFIX "application_")

# osgdem
set(SRC_DIR ${VIRTUALPLANETBUILDER_SOURCE_DIR}/applications/osgdem)
SET(TARGET_NAME "osgdem")
SET(CMAKE_PROJECT_NAME "${TARGET_DEFAULT_PREFIX}${TARGET_NAME}")

SET(TARGET_SRC ${SRC_DIR}/osgdem.cpp )

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${TARGET_SRC})
include(${PROJECT_SOURCE_DIR}/config/link.cmake)

# vpbcache
set(SRC_DIR ${VIRTUALPLANETBUILDER_SOURCE_DIR}/applications/vpbcache)
SET(TARGET_NAME "vpbcache")
SET(CMAKE_PROJECT_NAME "${TARGET_DEFAULT_PREFIX}${TARGET_NAME}")

SET(TARGET_SRC ${SRC_DIR}/vpbcache.cpp )

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${TARGET_SRC})
include(${PROJECT_SOURCE_DIR}/config/link.cmake)

# vpbmaster
set(SRC_DIR ${VIRTUALPLANETBUILDER_SOURCE_DIR}/applications/vpbmaster)
SET(TARGET_NAME "vpbmaster")
SET(CMAKE_PROJECT_NAME "${TARGET_DEFAULT_PREFIX}${TARGET_NAME}")

SET(TARGET_SRC ${SRC_DIR}/vpbmaster.cpp )

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${TARGET_SRC})
include(${PROJECT_SOURCE_DIR}/config/link.cmake)

# vpbsizes
set(SRC_DIR ${VIRTUALPLANETBUILDER_SOURCE_DIR}/applications/vpbsizes)
SET(TARGET_NAME "vpbsizes")
SET(CMAKE_PROJECT_NAME "${TARGET_DEFAULT_PREFIX}${TARGET_NAME}")

SET(TARGET_SRC ${SRC_DIR}/vpbsizes.cpp )

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${TARGET_SRC})
include(${PROJECT_SOURCE_DIR}/config/link.cmake)
